# tracking_news

./: .env.example  .gitignore  BLOCKERS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  RUNBOOK.md  TASK.md  TASKS.md  dashboard.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: companies.txt  feeds.json  settings.py  tickers.json
database/: schema.sql
docs/: PROJECT_REPORT_FULL.md  TECHNICAL_REPORT.md
scripts/: demo.sh  format.sh  lint.sh  run.sh  test.sh
src/news_ingestor/: __init__.py  cli.py  feeds.py  logging_utils.py  matching.py  models.py  pipeline.py  retention.py  taxonomy.py
src/news_ingestor/crawlers/: __init__.py  base.py  cafef.py  rss_crawler.py  scheduler.py  vietstock.py  vnexpress.py
src/news_ingestor/mcp_server/: __init__.py  server.py
src/news_ingestor/models/: __init__.py  article.py  enums.py
src/news_ingestor/output/: kafka.py
src/news_ingestor/processing/: __init__.py  cleaner.py  content_fetcher.py  embeddings.py  entity_extractor.py  impact_classifier.py  pipeline.py  sentiment.py
src/news_ingestor/storage/: __init__.py  database.py  repository.py  vector_store.py
src/news_ingestor/utils/: __init__.py  alerting.py  evaluation.py  logging_config.py  metrics.py  text_utils.py
tests/: conftest.py
tests/e2e/: test_smoke_local_feed.py
tests/fixtures/: sample_atom.xml  sample_rss.xml
tests/integration/: test_kafka_integration.py  test_pipeline.py
tests/unit/: test_alerting.py  test_cleaner.py  test_cli_demo.py  test_entity_extractor.py  test_evaluation.py  test_feeds.py  test_impact_classifier.py  test_matching_taxonomy.py  test_models.py  test_repository.py  test_retention.py  test_scheduler.py  test_sentiment.py  test_settings.py  test_text_utils.py
