[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-ingestor"
version = "0.1.0"
description = "Vietnam finance news ingestor with Kafka output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "pydantic>=2.7",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.5.0"]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "types-python-dateutil>=2.9.0.20240316",
]

[project.scripts]
news-ingestor = "news_ingestor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=news_ingestor --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP017"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["news_ingestor"]
